--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/router": "^15.2.0",
     "@turf/boolean-point-in-polygon": "^6.5.0",
     "@types/leaflet": "^1.9.8",
+    "@types/leaflet.heat": "^0.2.4",
     "@types/turf": "^3.5.32",
     "chart.js": "^4.4.2",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "primeng": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
